# master_thesis

./: .gitignore  .gitmodules  Feedback AuthenticExecution  Feedback AuthenticExecution.txt
Code/attestation/: CMakeLists.txt
Code/attestation/host/: main.c  virt_to_phys_user.c  virt_to_phys_user.h
Code/attestation/ta/: Android.mk  attestation_ta.c
Code/attestation/ta/include/: attestation_ta.h
Code/attestationPTA/: measurement.c
Code/basis/: Android.mk  CMakeLists.txt
ExperimentDescriptions/: Booting_process.txt
ExperimentDescriptions/attestation/: Android.mk  CMakeLists.txt  building.txt
ExperimentDescriptions/attestation/host/: Makefile  kern.c  kern.cpp  kern.h  main.c
ExperimentDescriptions/attestation/libteec/: Makefile  cmake_install.cmake  libteec.so.1.0.0
ExperimentDescriptions/attestation/optee_example_attestation/: CMakeLists.txt
ExperimentDescriptions/attestation/optee_example_attestation/host/: Makefile  main.c
ExperimentDescriptions/attestation/optee_example_attestation/ta/: Makefile  attest_ta.c  user_ta_header_defines.h
ExperimentDescriptions/attestation/optee_example_attestation/ta/include/: attest_ta.h
ExperimentDescriptions/attestation/ta/: attest_ta.c
ExperimentDescriptions/booting/: .config_uboot  Booting_process.txt  README.md  boot.cmd  boot_improvement_options.txt  booting_build_script_original.sh  booting_flash_script.sh  (+2 more)
Follow-up/: ThesisPlanning.txt
LiteratureStudy/: LiteratureStudy.aux  LiteratureStudy.out  LiteratureStudy.tex  LiteratureStudy.toc
Presentations/: main.aux  main.nav  main.out  main.tex
Writing/: Outline.aux  Outline.bbl  Outline.bcf  Outline.blg  Outline.figlist  Outline.out  Outline.run.xml  Outline.tex  Outline.toc  bibfile.bib  bibfile.blg  references.bib  references.blg  thesis.aux  thesis.bbl  thesis.bcf  thesis.blg  thesis.dvi  thesis.figlist  thesis.lof  thesis.lot  thesis.out  thesis.run.xml  thesis.tex  thesis.toc
attestation/: Android.mk  CMakeLists.txt
attestation/host/: Makefile  kern.h  main.c  virt_to_phys_user.c  virt_to_phys_user.h
attestation/ta/: attestation_ta.c  sub.mk  user_ta_header_defines.h
attestation/ta/include/: attestation_ta.h
(+133 files in other folders)
